--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
-spring.application.name=carrental
+# ===============================
+# =  DataSource Configuration  =
+# ===============================
+
+spring.datasource.url=jdbc:postgresql://ep-lucky-thunder-a5c3bg8p-pooler.us-east-2.aws.neon.tech:5432/carrental?sslmode=require
+spring.datasource.username=carrental_owner
+spring.datasource.password=npg_MNrHXUSFD4s2
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# =  JPA / Hibernate Settings   =
+# ===============================
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# =  Optional Connection Pool   =
+# ===============================
+
+# spring.datasource.hikari.maximum-pool-size=10
+# spring.datasource.hikari.minimum-idle=5
+# spring.datasource.hikari.idle-timeout=30000
+# spring.datasource.hikari.connection-timeout=20000
+# spring.datasource.hikari.pool-name=NeonHikariCP
