--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,38 @@
 #<<<<<<< HEAD
-#spring.application.name=CarRentalSystem
-#spring.datasource.driver=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/carrental
-#spring.datasource.username=postgres
-#spring.datasource.password=password
-#
-#spring.jpa.hibernate.ddl-auto =update
-#server.port=8080
-## Hibernate configuration
-##spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-## Spring Mail Configuration
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=Prateek.kumar949@gmail.com
-#spring.mail.password=jlwh nzda wssz gorc
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.main.allow-circular-references=true
+spring.application.name=CarRentalSystem
+spring.datasource.driver=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://10.226.43.190:5432/Practice_Security
+spring.datasource.username=postgres
+spring.datasource.password=mrunal
+
+# Hibernate configuration
+# Spring Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=Prateek.kumar949@gmail.com
+spring.mail.password=jlwh nzda wssz gorc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.main.allow-circular-references=true
 # ===============================
 # =  DataSource Configuration  =
 # ===============================
 
-spring.datasource.url=jdbc:postgresql://ep-lucky-thunder-a5c3bg8p-pooler.us-east-2.aws.neon.tech:5432/carrental?sslmode=require
-spring.datasource.username=carrental_owner
-spring.datasource.password=npg_MNrHXUSFD4s2
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://ep-lucky-thunder-a5c3bg8p-pooler.us-east-2.aws.neon.tech:5432/carrental?sslmode=require
+#spring.datasource.username=carrental_owner
+#spring.datasource.password=npg_MNrHXUSFD4s2
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
 # =  JPA / Hibernate Settings   =
 # ===============================
-server.port=80
+server.port=8060
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=MySuperSecretKeyForJWTGenerationInCarRentalApp123!
+jwt.expiration=86400000   # 24 hours in milliseconds
 
 # ===============================
 # =  Optional Connection Pool   =
