Added the Docker File

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #<<<<<<< HEAD
 spring.application.name=CarRentalSystem
-spring.datasource.driver=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://10.226.43.190:5432/Practice_Security
-spring.datasource.username=postgres
-spring.datasource.password=mrunal
+#spring.datasource.driver=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://10.226.43.190:5432/Practice_Security
+#spring.datasource.username=postgres
+#spring.datasource.password=mrunal
 #spring.application.name=CarRentalSystem
 #spring.datasource.driver=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://10.226.43.190:5432/Practice_Security
@@ -23,10 +23,10 @@ spring.main.allow-circular-references=true
 # =  DataSource Configuration  =
 # ===============================
 #
-#spring.datasource.url=jdbc:postgresql://ep-lucky-thunder-a5c3bg8p-pooler.us-east-2.aws.neon.tech:5432/carrental?sslmode=require
-#spring.datasource.username=carrental_owner
-#spring.datasource.password=npg_MNrHXUSFD4s2
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://ep-lucky-thunder-a5c3bg8p-pooler.us-east-2.aws.neon.tech:5432/carrental?sslmode=require
+spring.datasource.username=carrental_owner
+spring.datasource.password=npg_MNrHXUSFD4s2
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
 # =  JPA / Hibernate Settings   =
